# chat-room

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  READNE.md
client/include/: chatclient.h  client.h  loggin.h  login.h  status.h
client/src/: chatclient.cpp  client.cpp  login.cpp  main.cpp
cproto/: CMakeLists.txt
cproto/include/: chat.h  cmds.h  cproto.h  cprotomsg.h  login.h  types.h
cproto/src/: chat.cpp  cproto.cpp  cprotomsg.cpp  cprototest.cpp  login.cpp
netutils/: CMakeLists.txt
netutils/include/: netutils.h
netutils/src/: netutils.cpp
server/: CMakeLists.txt
server/include/: people.h  room.h  roommanager.h  server.h  usermanager.h
server/src/: main.cpp  people.cpp  roommanager.cpp  server.cpp  usermanager.cpp
